--- a/concepts/core-architecture/mocking-fundamentals.mdx
+++ b/concepts/core-architecture/mocking-fundamentals.mdx
@@ -1,214 +1,293 @@
 ---
-title: "Mocking Fundamentals with GoogleMock"
-description: "Explore the principles behind mocking in GoogleMock: what mocks are, why they're used, how expectations and behaviors are declared, and how they interleave with standard unit test definitions. Grasp the function and value of ON_CALL(), EXPECT_CALL(), and the MOCK_METHOD macro."
+title: "Understanding Mocking Concepts"
+description: "Get to know the principles of mocking in GoogleMock—what mocks are, why they're useful, and the mental model for using ON_CALL, EXPECT_CALL, actions, and matchers. This page explains the philosophy, design patterns, and domain vocabulary necessary for effective mocking."
 ---
 
-# Mocking Fundamentals with GoogleMock
+# Understanding Mocking Concepts in GoogleMock
 
-GoogleMock (gMock) revolutionizes C++ unit testing by enabling developers to define *mock objects* that simulate real objects' behavior. This page guides you through the principles behind mocking with GoogleMock, helping you grasp what mocks are, why to use them, and how to specify their behavior and expectations effectively.
-
----
-
-## What Is a Mock?
-
-Imagine your code depends on some external component — say, a complex database or a slow network service. Testing your code with the actual component may be costly, brittle, or simply impractical. A **mock object** acts as a test double: it implements the same interface as the real component but allows you to specify, at runtime, *how* it behaves and *what* it returns.
-
-Unlike a fake (which usually has a working implementation with simplified logic), a mock is pre-programmed with **expectations** about *which methods should be called*, *how many times*, *with what arguments*, and *in what order*. When your code interacts with the mock, GoogleMock verifies these expectations automatically, reporting mismatches immediately.
-
-
-<Info>
-Think of a mock as a vigilant assistant who not only performs tasks but also notes exactly how and when they are done, alerting you the moment something is off.
-</Info>
+Get to know the principles of mocking in GoogleMock—what mocks are, why they're useful, and the mental model for using ON_CALL, EXPECT_CALL, actions, and matchers. This guide explains the philosophy, design patterns, and domain vocabulary necessary for effective mocking.
 
 ---
 
-## Key Building Blocks of GoogleMock
+## What is Mocking and Why Use It?
 
-GoogleMock provides a declarative and highly readable way to specify mock behavior and expectations. Three core constructs shape your interaction with mocks:
+Imagine you’re developing a system where components interact with each other, but during testing, some parts are unavailable, slow, or non-deterministic. Mocking lets you replace these real components with mock objects that simulate their behavior precisely and controllably.
 
-### 1. MOCK_METHOD — Declare Mock Methods in Mock Classes
+A **mock object** implements the same interface as the real one but lets you **define expectations** about how it is used (which methods will be called, with what arguments, in what order, and what they return). Unlike *fake objects* that provide partial functional implementations, mocks focus on **verifying interactions**.
 
-You declare mock methods inside mock classes using the `MOCK_METHOD` macro. It looks like this:
+**Why does mocking matter?**
 
-```cpp
-class MockFoo {
- public:
-  MOCK_METHOD(ReturnType, MethodName, (ArgTypes...), (specifiers));
-};
-```
+- **Isolate Tests:** Remove dependencies on slow, unreliable, or unavailable components.
+- **Speed:** Tests run faster without real external resources (like databases or networks).
+- **Control:** Simulate rare or error conditions hard to reproduce otherwise.
+- **Verification:** Check that your code interacts correctly (calls the right methods, correct order).
 
-- `ReturnType`: The return type of the method.
-- `MethodName`: The method name.
-- `(ArgTypes...)`: The method parameter types.
-- `(specifiers)`: Optional qualifiers, e.g., `(const, override)` if overriding a virtual const method.
-
-
-This macro generates methods that intercept calls and let GoogleMock verify expectations and provide stubbed responses.
-
-### Practical Tip: Handling Commas in Types
-
-If argument or return types contain commas (e.g., templates like `std::pair<bool, int>`), wrap the type in parentheses or use a `using` alias:
-
-```cpp
-using BoolIntPair = std::pair<bool, int>;
-class MockFoo {
- public:
-  MOCK_METHOD(BoolIntPair, GetPair, ());
-};
-```
+GoogleMock automates this for C++ developers with an expressive syntax and powerful features.
 
 ---
 
-### 2. ON_CALL — Set Default Behavior for Mock Methods
+## The Mocking Workflow
 
-Use `ON_CALL(mock_object, method(matchers))` to define the **default action** when a mock method is invoked without explicit expectations. For example, you can specify what it returns or how it behaves when called with certain arguments.
+To harness GoogleMock effectively, think of your testing in the following steps:
 
-Example:
+1. **Define a Mock Class:** Create a mock class that inherits from your interface and uses `MOCK_METHOD` macros to declare methods.
+2. **Create Mock Objects:** Instantiate mock objects in your tests where you control their behavior.
+3. **Set Expectations:** Use `EXPECT_CALL` to specify expected method calls, argument constraints, call counts, ordering, and behaviors.
+4. **Set Default Behavior:** Optionally use `ON_CALL` to specify general/mock default behavior without requiring a call.
+5. **Exercise Your Code:** Run the code under test, which uses the mock objects instead of real dependencies.
+6. **Verification:** GoogleMock automatically verifies whether all expectations were met at mock destruction.
 
-```cpp
-ON_CALL(mock_foo, GetValue(_))
-    .WillByDefault(Return(42));
-```
-
-This doesn't assert that the method *must* be called; it only defines what happens if it is.
-
-### Best Practice
-
-Use `ON_CALL` to set common behaviors shared by multiple tests or for calls you don't actually assert on.
+If expectations are violated during test execution (wrong calls, wrong order, unexpected calls), GoogleMock reports failures immediately with detailed diagnostics.
 
 ---
 
-### 3. EXPECT_CALL — Define Concrete Expectations
+## Defining Mock Classes
 
-The `EXPECT_CALL(mock_object, method(matchers))` macro establishes an **expectation** that the method *will be called* with specified arguments.
-
-It allows you to:
-
-- Specify *how many times* the method should be called (using `.Times()`).
-- Define the *order* of calls (using `.InSequence()` or `.After()`).
-- Set *actions* to perform (`.WillOnce()`, `.WillRepeatedly()`).
-
-Example:
-
-```cpp
-EXPECT_CALL(mock_foo, Process(Ge(5)))
-    .Times(3)
-    .WillRepeatedly(Return(true));
-```
-
-This expects `Process()` to be called exactly 3 times with an argument greater or equal to 5, returning `true` each time.
-
-### Practical Tips
-
-- If you omit `.Times()`, GoogleMock infers the count based on `WillOnce` / `WillRepeatedly` clauses or defaults to 1.
-- Use wildcard matcher `_` when argument values don’t matter.
-
----
-
-## Understanding Uninteresting vs Unexpected Calls
-
-- **Uninteresting calls**: Method calls to mock methods with no associated `EXPECT_CALL`. These calls trigger *warnings* by default.
-- **Unexpected calls**: Method calls that don't match any established `EXPECT_CALL`. These raise *test failures*.
-
-By default, GoogleMock mock objects are *naggy*: they warn on uninteresting calls but fail on unexpected calls.
-
-### Strictness Wrappers
-
-GoogleMock provides wrappers to control how strictly mock objects treat uninteresting calls:
-
-- `NiceMock<T>`: Suppresses warnings on uninteresting calls.
-- `NaggyMock<T>`: Default behavior (warns on uninteresting).
-- `StrictMock<T>`: Treats uninteresting calls as errors.
-
-They can be constructed like regular mocks:
-
-```cpp
-NiceMock<MockFoo> nice_mock;
-StrictMock<MockFoo> strict_mock;
-```
-
-Use **NiceMock** to reduce noise when uninteresting calls are acceptable.
-Use **StrictMock** to enforce rigor, ensuring all behavior is explicitly expected.
-
-<Note>
-Strictness wrappers only affect mock methods defined with the `MOCK_METHOD` macro directly in the mock class, not inherited mock methods.
-</Note>
-
----
-
-## User Workflow: Creating and Using Mock Objects
-
-Here's a typical progression to leverage GoogleMock in your tests:
-
-1. **Define the mock class:** Derive from the interface or abstract class, declare mocked methods using `MOCK_METHOD`.
-2. **Instantiate a mock object:** Use either the mock class directly or with a strictness wrapper.
-3. **Set default behavior:** Use `ON_CALL` to specify behavior when the method is called without explicit expectation.
-4. **Set expectations:** Use `EXPECT_CALL` to declare expectations about method calls.
-5. **Exercise your code:** Run the code that depends on the mock.
-6. **Verification:** GoogleMock automatically verifies all expectations when the mock object is destroyed.
-
-
-### Example: Mocking a Turtle Interface
+You create mock classes by inheriting from the interface you want to mock and declaring methods with the `MOCK_METHOD` macro:
 
 ```cpp
 class Turtle {
  public:
   virtual ~Turtle() {}
+  virtual void PenUp() = 0;
   virtual void PenDown() = 0;
   virtual void Forward(int distance) = 0;
+  virtual void Turn(int degrees) = 0;
+  virtual void GoTo(int x, int y) = 0;
   virtual int GetX() const = 0;
   virtual int GetY() const = 0;
 };
 
 class MockTurtle : public Turtle {
  public:
+  MOCK_METHOD(void, PenUp, (), (override));
   MOCK_METHOD(void, PenDown, (), (override));
   MOCK_METHOD(void, Forward, (int distance), (override));
+  MOCK_METHOD(void, Turn, (int degrees), (override));
+  MOCK_METHOD(void, GoTo, (int x, int y), (override));
   MOCK_METHOD(int, GetX, (), (const, override));
   MOCK_METHOD(int, GetY, (), (const, override));
 };
-
-// Using in tests
-MockTurtle mock_turtle;
-ON_CALL(mock_turtle, GetX())
-    .WillByDefault(Return(0));
-EXPECT_CALL(mock_turtle, PenDown()).Times(1);
-
-// Run code that uses turtle...
 ```
+
+- **Important:** Always declare mock methods public, regardless of base class access.
+- Mock classes can be placed near tests or shared if mocking external interfaces.
 
 ---
 
-## Tips, Pitfalls, and Best Practices
+## Setting Expectations with EXPECT_CALL
 
-- Put `MOCK_METHOD` declarations in the **public** section regardless of original access; this makes them accessible for expectation specification.
-- Use `using BaseClass::Method` if you're mocking only some overloaded methods to avoid hiding others.
-- Prefer `ON_CALL` for common default behavior and `EXPECT_CALL` to verify exact interactions, not over-constraining your tests.
-- Suppress uninteresting call warnings with `NiceMock` or explicit catch-all `EXPECT_CALL(...).Times(AnyNumber())`.
-- Use sequences and ordering (`InSequence`, `After`) to ensure the correct order of calls.
-- Be cautious with mock strictness; overly strict mocks make tests brittle and fragile to implementation changes.
+The core mechanism to verify behavior is through `EXPECT_CALL`. It specifies:
 
-<Warning>
-Setting expectations after the mock method was called leads to undefined behavior. Always set expectations *before* exercising the code.
-</Warning>
+- What method on which mock object is expected to be called
+- What arguments it should be called with
+- How many times it should be called
+- What action it should perform when called
+
+### Syntax Overview:
+
+```cpp
+EXPECT_CALL(mock_object, Method(argument_matchers...))
+    .Times(cardinality)
+    .WillOnce(action)
+    .WillRepeatedly(action)
+    .InSequence(sequence(s))
+    .After(expectation(s))
+    .RetiresOnSaturation();
+```
+
+Only `.Times()` and `.WillRepeatedly()` are optional, with default rules applied when omitted.
+
+### Example:
+
+```cpp
+EXPECT_CALL(turtle, GetX())
+    .Times(5)
+    .WillOnce(Return(100))
+    .WillOnce(Return(150))
+    .WillRepeatedly(Return(200));
+```
+
+This means "GetX()" will be called five times:
+- 1st call returns 100
+- 2nd call returns 150
+- Remaining calls return 200
+
+### Best Practices
+
+- Set expectations **before** exercising code. Never set expectations after the mock is used.
+- Use matchers to specify argument constraints precisely but avoid over-specification.
+- Use sequences (`InSequence`) or `.After()` clauses to enforce order if needed.
+- Use `.RetiresOnSaturation()` to make expectations 'sticky' or not, based on your test logic.
+
+---
+
+## Argument Matchers
+
+Matchers describe **what arguments** you expect a method to be called with. They can be:
+- **Exact values:** e.g., `EXPECT_CALL(foo, Bar(42));`
+- **Wildcards:** `_` meaning any value matches
+- **Relational:** `Ge(5)`, `Lt(10)` to specify ranges
+- **Custom predicates:** using `Truly()` to apply arbitrary boolean conditions
+
+Example:
+
+```cpp
+EXPECT_CALL(turtle, GoTo(50, _)); // x == 50, y = anything
+EXPECT_CALL(turtle, Forward(Ge(100))); // forward at least 100
+```
+
+If your test doesn’t care about arguments, you can omit them (only for non-overloaded methods):
+
+```cpp
+EXPECT_CALL(turtle, Forward);
+```
+
+This means "Forward()" called with any arguments.
+
+---
+
+## Default Behavior with ON_CALL
+
+`ON_CALL` sets the behavior of mock methods when a call is made but does not require or verify that the call occurs.
+
+Example:
+
+```cpp
+ON_CALL(turtle, GetSize()).WillByDefault(Return(1));
+```
+
+Use `ON_CALL` to configure default stub behaviors commonly shared across tests. `EXPECT_CALL` is for calls you want to verify.
+
+Using too many `EXPECT_CALL`s can over-constrain tests and cause brittleness; prefer `ON_CALL` for ordinary behaviors.
+
+---
+
+## Actions: Controlling Method Behavior
+
+A mock method does nothing by itself. Actions define what happens when a mocked method is called.
+
+- **Return values:** Use `Return()`, `ReturnRef()`.
+- **Invoke functions or lambdas:** Use `Invoke()`.
+- **Modify output parameters:** Use actions like `SetArgPointee<N>(value)`.
+- **Combine multiple effects:** Use `DoAll()`.
+
+Example:
+
+```cpp
+EXPECT_CALL(turtle, GetX())
+    .WillOnce(Return(100));
+
+EXPECT_CALL(turtle, Mutate(_, _))
+    .WillOnce(DoAll(SetArgPointee<1>(5), Return(true)));
+```
+
+**Note:** Actions in `EXPECT_CALL` can be chained in the order they should be executed.
+
+---
+
+## Controlling Call Order and Cardinalities
+
+By default, calls can occur in any order. To enforce order:
+
+- Use `InSequence` object to wrap expectations for strict order.
+
+```cpp
+{
+  InSequence s;
+  EXPECT_CALL(mock, Foo());
+  EXPECT_CALL(mock, Bar());
+}
+```
+
+- Use `.After()` clause to specify partial order dependencies.
+
+Cardinalities (`Times()` clause) specify how many times a call is expected:
+
+| Cardinality            | Meaning                                   |
+|-----------------------|--------------------------------------------|
+| `AnyNumber()`         | Called any number of times                  |
+| `AtLeast(n)`          | Called at least n times                     |
+| `AtMost(n)`           | Called at most n times                      |
+| `Between(m, n)`       | Called between m and n times (inclusive)   |
+| `Exactly(n)` or `n`   | Called exactly n times, 0 means never called |
+
+---
+
+## Managing Mock Strictness: Nice, Naggy, and Strict Mocks
+
+GoogleMock provides three strictness levels controlling uninteresting calls (calls to methods without expectations):
+
+| Mock Type          | Behavior on Uninteresting Calls                        |
+|--------------------|-------------------------------------------------------|
+| `NiceMock<T>`      | Suppresses warnings on uninteresting calls            |
+| `NaggyMock<T>`     | (Default) Prints warnings but allows calls            |
+| `StrictMock<T>`    | Treats uninteresting calls as test failures           |
+
+Example:
+
+```cpp
+using ::testing::NiceMock;
+NiceMock<MockFoo> foo;  // Suppresses warnings
+
+using ::testing::StrictMock;
+StrictMock<MockFoo> bar; // Fails on unexpected calls
+```
+
+Choose the lower strictness to reduce test noise and brittleness, and use strict mocks only when you want to enforce exact call behavior.
+
+*Tip:* These wrappers only affect mock methods *directly* declared in the mock class with `MOCK_METHOD`, not inherited ones.
+
+---
+
+## Common Pitfalls and Tips
+
+- **Set expectations before calling mock methods.** Setting expectations afterward leads to undefined behavior.
+- **Avoid over-specification.** Use wildcards `_` where arguments are unimportant.
+- **Beware of sticky expectations.** By default, expectations remain active after saturation; use `.RetiresOnSaturation()` to retire them.
+- **Use sequences and `.After()` for ordering, but avoid brittle, overly strict ordering.
+- **`ON_CALL` vs `EXPECT_CALL`:** Use `ON_CALL` to set default behaviors without enforcing calls; use `EXPECT_CALL` when you want to verify interactions.
+- **Suppress uninteresting call warnings with `NiceMock` or `EXPECT_CALL(...).Times(AnyNumber())`.
 
 ---
 
 ## Summary
 
-GoogleMock transforms testing by enabling explicit declaration of expected interactions with your code’s dependencies. By mastering `MOCK_METHOD`, `ON_CALL`, `EXPECT_CALL`, and using strictness wrappers, you gain precise control over your tests and powerful diagnostics when expectations are violated.
-
-For detailed recipes and advanced usage, explore the GoogleMock Cookbook and related reference guides.
+Mocking in GoogleMock enables precise simulation and verification of interactions in C++ tests by defining mock classes, setting expectations with `EXPECT_CALL`, specifying default behaviors with `ON_CALL`, harnessing argument matchers and actions, and choosing mock strictness. Designing mocks carefully improves test robustness and clarity.
 
 ---
 
 ## Additional Resources
 
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Practical recipes for mocking.
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html): Beginner-friendly tutorial.
-- [Mocking Reference](reference/mocking.md): Formal API reference for mocking.
-- [Matchers Reference](reference/matchers.md): Guide on argument matchers.
-- [Actions Reference](reference/actions.md): Details on actions to specify mock behavior.
-- [Strictness Wrappers in GoogleMock](../googlemock/include/gmock/gmock-nice-strict.h): Implementation details on NiceMock, NaggyMock, and StrictMock.
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — Beginner-friendly introduction
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Recipes for advanced mocking usages
+- [Mock Class Definition & Method Mocking](api-reference/mocking-apis/mock-class-definition.md) — Deep dive on defining mocks
+- [Setting Expectations & Behaviors](api-reference/mocking-apis/expectations-behaviors.md) — Detailed usage of `EXPECT_CALL` and `ON_CALL`
+- [Nice, Naggy, and Strict Mocks](guides/mocking-advanced-usage/nice-strict-mocks.md) — Managing mock strictness
+- [Matchers and Actions Reference](api-reference/mocking-apis/matchers-actions.md) — Comprehensive listing of matchers and actions
+
+For a holistic understanding, begin with [What is GoogleTest?](/overview/product-introduction-and-value/what-is-googletest), then explore the core concepts and mocking guides.
 
 ---
+
+## Frequently Asked Questions
+
+<AccordionGroup title="Common Questions About Mocking">
+<Accordion title="What is the difference between mocks and fakes?">
+Mocks are pre-programmed objects with expectations on calls, verifying interaction; fakes provide simplified but working implementations useful for testing.
+</Accordion>
+<Accordion title="When should I use ON_CALL vs EXPECT_CALL?">
+Use `ON_CALL` to set default behaviors without requiring calls. Use `EXPECT_CALL` to both set behavior and require the call to happen.
+</Accordion>
+<Accordion title="How to handle calls with arguments I don't care about?">
+Use the wildcard matcher `_` in `EXPECT_CALL` to match any argument value.
+</Accordion>
+<Accordion title="How do I ensure method calls happen in a specific order?">
+Use `InSequence` to define strict ordering or use `.After()` to specify partial ordering between expectations.
+</Accordion>
+<Accordion title="Why do I get warnings about uninteresting calls?">
+Because calls are made to mock methods without expectations. To suppress, use `NiceMock` or add a catch-all `EXPECT_CALL` with `Times(AnyNumber())`.
+</Accordion>
+</AccordionGroup>
+
+
