--- a/faq/support-and-community/where-to-get-help.mdx
+++ b/faq/support-and-community/where-to-get-help.mdx
@@ -1,111 +1,137 @@
 ---
-title: "Getting Support & Finding Help"
-description: "Information on official help channels, GitHub issue trackers, and prime sources of up-to-date troubleshooting advice. Ensures users know where to turn for expert guidance when FAQs and documentation don't resolve their needs."
+title: "Where can I get help or report issues?"
+description: "Lists official and community resources for seeking help—including documentation, community forums, and issue trackers—plus guidance on providing effective bug reports and feature suggestions."
 ---
 
-# Getting Support & Finding Help
+# Where can I get help or report issues?
 
-GoogleTest and GoogleMock offer robust testing and mocking capabilities, but sometimes you may encounter issues or need expert guidance beyond what documentation and FAQs provide. This page directs you to the official help channels, community resources, and issue trackers where you can find timely assistance and the latest troubleshooting advice.
-
----
-
-## Official Support Channels
-
-### GitHub Issue Tracker
-
-- **Primary place to report bugs, issues, or feature requests:**
-
-  Use the [GoogleTest GitHub repository Issues page](https://github.com/google/googletest/issues) for submitting detailed reports.
-
-- **Tips for effective issue reporting:**
-
-  1. Search existing issues before opening a new one — your problem might have been resolved or discussed previously.
-  2. Provide a minimal, reproducible example demonstrating the problem.
-  3. Include details such as operating system, compiler version, GoogleTest/GoogleMock version, and exact error messages.
-  4. Mention steps you've taken to troubleshoot or workarounds you've tried.
-
-### Mailing Lists and Official Forums
-
-While GoogleTest does not maintain an official mailing list, many users discuss issues on developer forums like Stack Overflow.
-
-- Use the tag [`googletest`](https://stackoverflow.com/questions/tagged/googletest) or [`gmock`](https://stackoverflow.com/questions/tagged/gmock) in Stack Overflow to search and ask questions.
-
-- Check [Google Testing Blog](https://testing.googleblog.com/) for announcements, tips, and insights from the maintainers.
-
-### Internal Google Support
-
-Google employees may have access to company-specific internal support channels; external users should use GitHub and public community forums.
+When working with GoogleTest and GoogleMock, finding the right assistance and knowing how to report issues effectively are key to maintaining smooth development and robust testing. This page guides you to official documentation, community resources, and instructions for filing bug reports or feature requests.
 
 ---
 
-## Community Resources
+## Official Documentation
 
-### Stack Overflow
+Google provides an extensive collection of documentation to help users understand and utilize GoogleTest and GoogleMock effectively:
 
-- Highly active community for GoogleTest and GoogleMock support
-- Questions tagged with [`googletest`](https://stackoverflow.com/questions/tagged/googletest) or [`gmock`](https://stackoverflow.com/questions/tagged/gmock)
+- **Getting Started Guides:** Step-by-step tutorials on installation and initial tests.
+- **Guides & Best Practices:** Covers writing tests, building mocks, custom matchers/actions, and advanced mocking techniques.
+- **API Reference:** Detailed technical information covering core testing APIs, mocking APIs, and platform configurations.
+- **FAQs:** Answers common questions on usage, integration, troubleshooting, and performance.
 
-### Google Groups and Forums
+You can access these resources typically via the [GoogleTest documentation website](https://google.github.io/googletest/).
 
-- Some legacy discussions may exist in Google Groups forums; however, active support happens mostly on GitHub and Stack Overflow.
 
-### Gitter, Discord, or Slack Channels
+## Community & Support Forums
 
-- Occasionally, third-party groups host chat channels; these are unofficial and vary in activity.
+Engage with a lively community of developers and testers who contribute solutions, discuss best practices, and share experiences:
 
-### Blogs and Tutorials
+- **GitHub Issues:** The primary venue for reporting bugs, requesting features, or discussing specific challenges. When opening an issue, provide a clear description, steps to reproduce, environment details, and expected vs actual behavior.
 
-- Refer to community-written blogs, tutorials, and sample projects listed in the [GoogleTest User's Guide index](https://github.com/google/googletest/blob/main/docs/index.md) for hands-on help.
+- **Stack Overflow:** Tag your questions with [`googletest`](https://stackoverflow.com/questions/tagged/googletest) or [`gmock`](https://stackoverflow.com/questions/tagged/gmock) to reach a broad audience.
 
----
+- **Mailing Lists & Chat:** Some communities maintain mailing lists or chat channels (Slack, Discord) for quicker informal help.
 
-## Documentation and Troubleshooting References
 
-If you haven't already, consider reviewing these key documentation areas before seeking help to quickly resolve many common issues:
+## How to File Bug Reports and Feature Requests
 
-- [Getting Started & Setup Issues](../common-questions/getting-started-issues) — covers installation and environment setup
-- [Using GoogleTest and GoogleMock Features](../common-questions/feature-usage) — guidance on test and mock usage
-- [Build & Integration Problems](../troubleshooting-guides/build-integration-errors) — fixes for compilation and linking problems
-- [Resolving Runtime & Test Issues](../troubleshooting-guides/runtime-and-test-failures) — solves failures during test runs
-- [Performance Tips & Best Practices](../troubleshooting-guides/performance-optimization) — improves test speed and reliability
+A well-constructed report accelerates resolution and reduces back-and-forth. Follow these best practices:
 
-Additionally, the [Mocking Reference](../../api-reference/mocking-framework/mock-object-basics) and [GoogleMock Cookbook](../../guides/mocking-and-advanced-testing/gmock_cook_book.md) offer actionable troubleshooting steps and recipes.
+### Bug Reports
 
----
+1. **Clear Title:** Summarize the issue succinctly.
+2. **Environment Details:** OS, compiler version, GoogleTest/GoogleMock version.
+3. **Minimal Reproducible Example:** Provide compact, self-contained code snippets demonstrating the problem.
+4. **Expected vs Actual Behavior:** What you expected to happen and what actually occurred.
+5. **Log or Error Messages:** Complete text from build logs or test failures.
+6. **Steps Tried:** Mention any troubleshooting attempts to avoid duplicated advice.
 
-## Best Practices to Get Help Quickly
+### Feature Requests
 
-- **Be precise:** Clearly describe your issue, including exact error messages and steps to reproduce it.
-- **Minimal examples:** Provide small, self-contained code snippets that trigger the problem.
-- **Version info:** Always mention the GoogleTest version and your build environment (OS, compiler etc.).
-- **Search first:** Use official docs and issue trackers to avoid duplicate reports.
+1. **Description:** Explain the feature's purpose and how it will improve workflows.
+2. **Use Case:** Provide real-world scenarios where this feature adds value.
+3. **Existing Workarounds:** Mention if there are any, and their limitations.
+4. **Priority:** If applicable, indicate urgency or impact on your projects.
 
----
 
-## Feedback and Contribution
+## Additional Tips for Getting Help
 
-- Feedback and suggestions for improvement are welcome via GitHub issues or pull requests.
-- Contributions to documentation, bug fixes, and samples help the entire GoogleTest community.
+- Before posting, search existing issues, FAQs, and forums to avoid duplicates.
+- Use clear, jargon-free language describing the problem or question.
+- Include relevant links to your code repository or gist if possible.
+- When reporting flaky or intermittent issues, provide context about frequency and environment changes.
 
----
-
-### Summary
-
-If your question remains unresolved after consulting this page and related documentation, the official GitHub issue tracker is the authoritative venue for filing issues. Engage respectfully and provide thorough information to expedite assistance.
-
-Together with community forums like Stack Overflow and the abundant developer resources linked throughout the GoogleTest documentation, these channels form a comprehensive support ecosystem to help you master GoogleTest and GoogleMock with confidence.
 
 ---
 
-## Useful Links
+## Summary
 
-- [GoogleTest GitHub Repository](https://github.com/google/googletest)
-- [GitHub Issues - GoogleTest](https://github.com/google/googletest/issues)
-- [Stack Overflow googletest tag](https://stackoverflow.com/questions/tagged/googletest)
-- [Google Testing Blog](https://testing.googleblog.com/)
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
-- [GoogleTest User's Guide](https://github.com/google/googletest/blob/main/docs/index.md)
+This page serves as your gateway to official support and community-driven assistance for GoogleTest and GoogleMock. Whether referencing detailed documentation or engaging in issue reporting, following these guidelines ensures efficient help and faster resolution.
+
 
 ---
 
-For additional help, explore documents on installation, configuration, mocking, and troubleshooting within the documentation navigation tree. Embrace community support and expert guidance to solve even the toughest GoogleTest challenges.
+## Related Documentation Links
+
+- [GoogleTest Installation Overview](/getting-started/setup-requirements/installation-overview)
+- [Writing Your First GoogleTest & GoogleMock Test](/getting-started/first-test-experience/writing-your-first-test)
+- [gMock Cookbook – Advanced Mocking Techniques](/guides/mocking-advanced-usage/building-mocks)
+- [Troubleshooting and Best Practices – Mocking Issues](/faq/troubleshooting-and-best-practices/mocking-issues)
+
+
+---
+
+## Example: Filing a Bug Report
+
+Here’s an example template to guide your bug filing process:
+
+```markdown
+### Title
+Mock does not verify EXPECT_CALL on inherited const method
+
+### Environment
+- OS: Ubuntu 22.04
+- Compiler: GCC 11.2
+- GoogleTest Version: v1.11.0
+
+### Steps to Reproduce
+Please see this minimal example:
+```cpp
+class Foo {
+ public:
+  virtual ~Foo() = default;
+  virtual int GetValue() const = 0;
+};
+
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, GetValue, (), (const, override));
+};
+
+TEST(FooTest, VerifyCall) {
+  MockFoo mock;
+  EXPECT_CALL(mock, GetValue());
+  // Forgot to call mock.GetValue();
+  // Expectation is verified on destruction and should fail
+}
+```
+
+### Expected Behavior
+Test fails because EXPECT_CALL is not satisfied.
+
+### Actual Behavior
+Test passes without errors.
+
+### Additional Info
+Checked with --gmock_verbose=info but no warnings.
+```
+
+
+---
+
+<Tip>
+Use clear, reproducible examples when reporting bugs or asking for help to speed up assistance.
+</Tip>
+
+<Note>
+Before submitting issues, please review the official documentation and existing GitHub issues to avoid duplication.
+</Note>
